--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # Development API (local backend)
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://store-rating-app-fo2n.onrender.com/api
 
 # App Configuration
 VITE_APP_NAME=Store Rating App
