--- a/backend/.env
+++ b/backend/.env
@@ -10,7 +10,7 @@ JWT_SECRET=a1b2c3d4e5f6g7h8i9j0k1l2m3n4o5p6q7r8s9t0u1v2w3x4y5z6
 JWT_EXPIRE=7d
 
 # CORS Configuration
-CLIENT_URL=https://store-rating-app-silk.vercel.app/
+CLIENT_URL=https://store-rating-app-silk.vercel.app
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
